# CST2550-CW2

./: Customer.cpp  Customer.h  README.md  main.cpp  makefile  movie.cpp  movie.h  movies.cpp  movies.csv  movies.h  rental.cpp  rental.h  test.csv  testing2.cpp
code/: CMakeLists.txt  makefile
code/include/: movie.h  rental.h
code/src/: movie.cpp  rental.cpp
include/: customer.h
src/: customer.cpp  main.cpp  movie.cpp
test/: GeneralTest.cpp  RentARentedMovie.cpp  RentMovie.cpp
